# ML

./: .gitignore  README.md  config.yaml  config2.yaml  experiment.py  model_calibrate.py  model_evaluate.py  model_evaluation.py  model_explain.py  pyproject.toml  requirements.txt  requirements_dev.txt  run.py  setup.cfg  tox.ini  xgb_experiment.py
.github/workflows/: tests.yaml
Datasets/: process_data.py
Datasets/creditcard/: other_001.csv
Datasets/creditcard-small/: test_001.csv  validation_001.csv
Datasets/creditcard_raw/: other_001.csv
Datasets/creditcard_raw_small/: other_001.csv  train_001.csv  train_002.csv
Experiments/1.0.1-20221020-183056/: config.yaml
Experiments/1.0.1-20221020-183056/explain/: permutation_importance_other.csv  permutation_importance_test.csv  permutation_importance_train.csv  permutation_importance_validation.csv  xgb_feature_importance.csv
Experiments/1.0.1-20221020-183056/model/: model.pkl
Experiments/1.0.1-20221020-183056/performance/: parameter_tuning_log.txt  parameter_tuning_trials.txt
Experiments/1.0.1-20221020-183056/performance/tables/: metrics_other.csv  metrics_test.csv  metrics_train.csv  metrics_validation.csv  n_estimators_vs_metrics_other.csv  n_estimators_vs_metrics_test.csv  n_estimators_vs_metrics_train.csv  n_estimators_vs_metrics_validation.csv  optimal_n_estimators.csv  threshold_vs_metrics_other.csv  threshold_vs_metrics_test.csv  threshold_vs_metrics_train.csv  threshold_vs_metrics_validation.csv
Experiments/1.0.1-20221020-183056/scores/: other_scores  test_scores  train_scores  validation_scores
Experiments/1.0.1-20230102-114944/calibration/comparison/: mapping_table_other.csv
Experiments/1.0.1-20230102-114944/calibration/model/: calibration_model.pkl
Experiments/1.0.1-20230102-114944/explain/: csi_long.csv  csi_wide.csv  psi.csv
Experiments/1.0.1-20230102-114944/explain/correlation/: corr_other.csv  corr_other_long.csv  corr_test.csv  corr_test_long.csv  corr_train.csv  corr_train_long.csv  corr_validation.csv  corr_validation_long.csv
Experiments/1.0.1-20230102-114944/explain/feature_importance/: permutation_importance_other.csv  permutation_importance_test.csv  permutation_importance_train.csv  permutation_importance_validation.csv  (+1 more)
Experiments/1.0.1-20230102-114944/logs/: parameter_tuning_log.txt  parameter_tuning_trials.txt
Experiments/1.0.1-20230102-114944/scores/: other_scores.csv  test_scores.csv  train_scores.csv  validation_scores.csv
examples/configs/: lgb_config.yaml  xgb_config.yaml
src/experiment/: experiment.py  experiment_lgb.py  experiment_xgb.py  model_calibrate.py  model_evaluate.py  model_explain.py  xgb_experiment.py
tests/: conftest.py  test_model_calibrate.py  test_model_evaluate.py  test_model_explain.py  test_xgb_experiment.py  utils.py
tests/objects/configs/: hptune_atpe.yaml  hptune_gridsearch.yaml  hptune_gridsearch_cv.yaml  hptune_randomsearch.yaml  hptune_tpe.yaml  xgb.yaml  xgb_load_model_from_obj.yaml  xgb_load_model_from_path.yaml  xgb_load_model_from_path_in_config.yaml  xgb_quantiles.yaml
tests/objects/models/: xgb_model.pkl
(+34 files in other folders)
