[metadata]
name = experiment
version = 1.0.1
description = Project to run ML experiments
author = Steve Hobbs
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    experiment
install_requires =
    dask==2022.7.0
    hyperopt==0.2.7
    matplotlib==3.5.2
    numpy==1.19.5
    pandas==1.3.0
    pathlib==1.0.1
    pytest==7.1.2
    cython==0.29.32
    scikit-learn==1.1.2
    scipy==1.9.1
    seaborn==0.12.0
    shap==0.41.0
    statsmodels==0.13.2
    tqdm==4.64.1
    xgboost==1.5.0
    pyyaml==6.0
    types-PyYAML==6.0.12.1
    lightgbm==3.2.1
python_requires = >=3.6
package_dir = 
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
    pyyaml>=6.0
    types-PyYAML>=6.0.12.1

[options.package_data]
experiment = py.typed

[flake8]
max-line-length = 160