[metadata]
name = experiment
version = 1.0.1
description = Project to run ML experiments
author = Steve Hobbs
classifiers =
    Programming Language :: Python :: 3.12

[options]
packages =
    experiment
install_requires =
    dask==2024.8.2
    dask-expr==1.1.12
    hyperopt==0.2.7
    matplotlib==3.9.2
    numpy==2.0.2
    pandas==2.2.2
    pathlib==1.0.1
    pytest==8.3.2
    cython==3.0.11
    scikit-learn==1.5.1
    scipy==1.14.1
    seaborn==0.13.2
    shap==0.46.0
    statsmodels==0.14.2
    tqdm==4.66.5
    xgboost==2.1.1
    pyyaml==6.0.2
    types-PyYAML==6.0.12.20240808
    lightgbm==4.5.0
python_requires = >=3.6
package_dir = 
    =src
zip_safe = no

[options.extras_require]
testing =
    setuptools>=72.1.0
    flake8>=7.1.1
    tox>=4.18.0
    pytest>=8.3.2
    pytest-cov>=5.0.0
    mypy>=1.11.2
    pysqlite3>=0.5.3
    pyyaml>=6.0.2
    types-PyYAML>=6.0.12.20240808

[options.package_data]
experiment = py.typed

[flake8]
max-line-length = 160